--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <h1 class="mbr-section-title cra-font-white align-left display-logo cra-font-air" style="color: rgb(238, 238, 238)">
            <span class="cra-font-pro">유수정입니다.</span>
           </h1>
-          <!-- <h5 class="mbr-section cra-font-white align-left display-logo cra-font-air" style="color: rgb(238, 238, 238); font-size: medium;">
-            모집 기간 : 2주차 화요일 09/06 23:59 까지
-          </h5> -->
+          <h5 class="mbr-section cra-font-white align-left display-logo cra-font-air" style="color: rgb(238, 238, 238); font-size: medium;">
+            링크로 접속해주세요 : https://crystalyoo99.github.io/resume_apple/
+          </h5>
           <!-- <h5 class="mbr-section cra-font-white align-left display-logo cra-font-air" style="color: rgb(238, 238, 238); font-size: medium;">
             모집 기간 : 2주차 화요일 09/06 23:59 까지
           </h5> -->
@@ -204,7 +204,8 @@
             <span class="cra-font-pro">아이택시</span><br>
             <!-- <span class="cra-font-pro">아이택시</span>는 한동 생활에 필수 어플입니다.<br> -->
             한동인들의 No.1 교통 어플리케이션입니다.<br>
-            교통에 어려움을 겪는 한동대 학생들을 위해 택시, ktx 동반석 모집을 제공합니다.<br>
+            교통에 어려움을 겪는 한동대 학생들을 위해 택시, ktx 동반석 모집을 제공합니다.<br><br>
+            이 프로젝트 전에는 앱을 제대로 만들어 본 적이 없었습니다. I-Taxi를 통해 앱에 대한 흥미를 갖게 되었습니다.<br>
             <br>
             <a href = "https://apps.apple.com/kr/app/%EC%95%84%EC%9D%B4%ED%83%9D%EC%8B%9C/id1437745640"><b style="color: red">앱스토어에서 다운받기</b></a><br>
             <span class="cra-font-pro">개발기간: 2022.07 ~ 10 / 구성원 : 6명</span>
@@ -229,14 +230,15 @@
             <!-- <span class="cra-font-pro">아이택시</span>는 한동 생활에 필수 어플입니다.<br> -->
             비콘(Beacon)이라는 무선태그와 수신기 간의 통신을 통해 발생하는 로그를 기반으로 <br>
             어린이 통학차량 내 방치사고 예방 앱 SCC, 스쿨존 내 교통사고 예방 방지를 위한 School Zone 앱, <br>
-            그리고 이 두 서비스를 통합하여 관리하고 모니터링 할 수 있는 관리자웹을 개발하는 프로젝트입니다.
-            <br>
+            그리고 이 두 서비스를 통합하여 관리하고 모니터링 할 수 있는 관리자웹을 개발하는 프로젝트입니다.<br>
+            
             <br>
             <span class="cra-font-pro">개발기간: 2022.07 ~ 10 / 구성원 : 2명</span>
             <br>
             <span class="cra-font-pro">담당업무: 프로젝트 기획, 프론트엔드, 백엔드</span>
             <br>
             <span class="cra-font-pro">개발스택: React, React Native, Flutter, Spring, Firebase, Mysql</span>
+
           </p>
         </div>
 
